--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,12 +67,14 @@ jobs:
       NODE10:
         NODE_VERSION: $(NODE_10)
   pool:
-    vmImage: 'vs2017-win2016'
+    vmImage: 'windows-latest'
   steps:
   - task: NodeTool@0
     inputs:
       versionSpec: $(NODE_VERSION)
     displayName: 'Install Node.js for test'
+  - script: npm install request
+    displayName: 'Workaround to https://github.com/grpc/grpc-node/issues/922'
   - script: npm install
     displayName: 'npm install'
   - script: npm run build
