--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Microsoft Azure Functions NodeJS Worker",
   "license": "(MIT OR Apache-2.0)",
   "dependencies": {
+    "create-function-app": "0.0.6",
     "google-protobuf": "^3.11.4",
     "grpc": "^1.24.2",
     "minimist": "^1.2.5",
