--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": false,
-        "strict": true,
+        "strict": false,
         "outDir": "dist/src",
         "sourceMap": true,
         "declaration": true,
@@ -12,8 +12,11 @@
     "include": [
         "src/**/*"
     ],
+    "files": [
+        "node_modules/typescript/lib/lib.es6.d.ts"
+    ],
     "exclude": [
         "node_modules"
     ],
-    "compileOnSave": true
+    "compileOnSave": true,
 }
